--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "homepage": "https://github.com/deeppaas/slider-verify#readme",
   "devDependencies": {
-    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@types/react": "^16.14.21",
     "@types/react-dom": "^16.9.14",
@@ -37,6 +36,7 @@
     "prettier": "^2.5.1",
     "react-dom": "^16.14.0",
     "rollup": "^2.61.1",
+    "rollup-plugin-sass": "^1.2.10",
     "rollup-plugin-styles": "^3.14.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.1",
