--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "vite": "^2.7.2"
   },
   "peerDependencies": {
-    "react": "^16.8.0"
+    "react": "^16.8.0",
+    "classnames": "^2.3.1"
   }
 }
