--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "@vitejs/plugin-react": "^1.1.3",
+    "autoprefixer": "^10.4.0",
     "eslint": "^8.4.1",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-config-prettier": "^8.3.0",
@@ -36,6 +37,7 @@
     "prettier": "^2.5.1",
     "react-dom": "^16.14.0",
     "rollup": "^2.61.1",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-sass": "^1.2.10",
     "rollup-plugin-styles": "^3.14.1",
     "rollup-plugin-terser": "^7.0.2",
@@ -44,7 +46,7 @@
     "vite": "^2.7.2"
   },
   "peerDependencies": {
-    "react": "^16.8.0",
-    "classnames": "^2.3.1"
+    "classnames": "^2.3.1",
+    "react": "^16.8.0"
   }
 }
