--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "docs": "tsc && vite build",
     "build": "rm -rf ./dist && rollup -c",
+    "after:bump": "npm run build",
     "release": "release-it"
   },
   "repository": {
