--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "vite": "^2.7.2"
   },
   "peerDependencies": {
-    "classnames": "^2.3.1",
-    "react": "^16.8.0"
+    "classnames": ">=2.3.1",
+    "react": ">=16.8.0"
   },
   "publishConfig": {
     "access": "public"
